// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LockButton /> should adopt props 1`] = `
<IconButton
  color="purple"
  disabled={false}
  inline={false}
  name="LOCK_OPEN"
  onClick={[Function]}
  plainButton={true}
  size="4rem"
  title="Lock level"
  type="button"
/>
`;

exports[`<LockButton /> should match baseline snapshot 1`] = `
<IconButton
  color="currentColor"
  disabled={true}
  inline={false}
  name="LOCK_SOLID"
  onClick={[Function]}
  plainButton={true}
  size="1.5em"
  title="Unlock level"
  type="button"
/>
`;
